Minimize htm-template

--- a/html-template/index.html
+++ b/html-template/index.html
@@ -8,403 +8,20 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    It's minimized template. Change count of squares on standart (19)
     <div id="gamego">
       <div id="board">
         <div class="rows">
           <div class="cols"></div>
           <div class="cols"></div>
           <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
         </div>
         <div class="rows">
           <div class="cols"></div>
           <div class="cols"></div>
           <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
         </div>
         <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-        </div>
-        <div class="rows">
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
-          <div class="cols"></div>
           <div class="cols"></div>
           <div class="cols"></div>
           <div class="cols"></div>
